RTCEth/Import Declarations/Visual C++/RTC4ethimpl.h


extern "C" void __stdcall goto_xy(short X, short Y);

extern "C" unsigned short __stdcall n_get_hex_version(unsigned short n);

extern "C" unsigned short __stdcall get_hex_version();

extern "C" void __stdcall n_disable_laser(unsigned short n);

extern "C" void __stdcall disable_laser();

extern "C" void __stdcall n_enable_laser(unsigned short n);

extern "C" void __stdcall enable_laser();

extern "C" void __stdcall n_stop_list(unsigned short n);

extern "C" void __stdcall stop_list();

extern "C" void __stdcall n_restart_list(unsigned short n);

extern "C" void __stdcall restart_list();

extern "C" void __stdcall n_get_xyz_pos(unsigned short n, short* X, short* Y, short* Z);

extern "C" void __stdcall get_xyz_pos(short* X, short* Y, short* Z);

extern "C" void __stdcall n_get_xy_pos(unsigned short n, short* X, short* Y);

extern "C" void __stdcall get_xy_pos(short* X, short* Y);

extern "C" void __stdcall n_select_list(unsigned short n, unsigned short list_2);

extern "C" void __stdcall select_list(unsigned short list_2);

extern "C" void __stdcall n_z_out(unsigned short n, short z);

extern "C" void __stdcall z_out(short z);

extern "C" void __stdcall n_set_firstpulse_killer(unsigned short n, unsigned short fpk);

extern "C" void __stdcall set_firstpulse_killer(unsigned short fpk);

extern "C" void __stdcall n_set_standby(unsigned short n, unsigned short half_period, unsigned short pulse);

extern "C" void __stdcall set_standby(unsigned short half_period, unsigned short pulse);

extern "C" void __stdcall n_laser_signal_on(unsigned short n);

extern "C" void __stdcall laser_signal_on();

extern "C" void __stdcall n_laser_signal_off(unsigned short n);

extern "C" void __stdcall laser_signal_off();

extern "C" void __stdcall n_set_delay_mode(unsigned short n, unsigned short VarPoly, unsigned short DirectMove3D, unsigned short EdgeLevel, unsigned short MinJumpDelay, unsigned short JumpLengthLimit);

extern "C" void __stdcall set_delay_mode(unsigned short VarPoly, unsigned short DirectMove3D, unsigned short EdgeLevel, unsigned short MinJumpDelay, unsigned short JumpLengthLimit);

extern "C" void __stdcall n_set_piso_control(unsigned short n, unsigned short l1, unsigned short l2);

extern "C" void __stdcall set_piso_control(unsigned short l1, unsigned short l2);

extern "C" void __stdcall n_select_status(unsigned short n, unsigned short mode);

extern "C" void __stdcall select_status(unsigned short mode);

extern "C" void __stdcall n_get_encoder(unsigned short n, short* Zx, short* Zy);

extern "C" void __stdcall get_encoder(short* Zx, short* Zy);

extern "C" void __stdcall n_select_cor_table(unsigned short n, unsigned short HeadA, unsigned short HeadB);

extern "C" void __stdcall select_cor_table(unsigned short HeadA, unsigned short HeadB);

extern "C" void __stdcall n_execute_at_pointer(unsigned short n, unsigned short position);

extern "C" void __stdcall execute_at_pointer(unsigned short position);

extern "C" unsigned short __stdcall n_get_head_status(unsigned short n, unsigned short Head);

extern "C" unsigned short __stdcall get_head_status(unsigned short Head);

extern "C" void __stdcall n_simulate_encoder(unsigned short n, unsigned short Channel);

extern "C" void __stdcall simulate_encoder(unsigned short Channel);

extern "C" void __stdcall n_release_wait(unsigned short n);

extern "C" void __stdcall release_wait();

extern "C" unsigned short __stdcall n_get_wait_status(unsigned short n);

extern "C" unsigned short __stdcall get_wait_status();

extern "C" void __stdcall n_set_laser_mode(unsigned short n, unsigned short mode);

extern "C" void __stdcall set_laser_mode(unsigned short mode);

extern "C" void __stdcall n_set_ext_start_delay(unsigned short n, short delay, short encoder);

extern "C" void __stdcall set_ext_start_delay(short delay, short encoder);

extern "C" void __stdcall n_home_position(unsigned short n, short xhome, short yhome);

extern "C" void __stdcall home_position(short xhome, short yhome);

extern "C" void __stdcall n_set_rot_center(unsigned short n, long center_x, long center_y);

extern "C" void __stdcall set_rot_center(long center_x, long center_y);

extern "C" void __stdcall n_dsp_start(unsigned short n);

extern "C" void __stdcall dsp_start();

extern "C" void __stdcall n_write_da_x(unsigned short n, unsigned short x, unsigned short value);

extern "C" void __stdcall write_da_x(unsigned short x, unsigned short value);

extern "C" unsigned short __stdcall n_read_ad_x(unsigned short n, unsigned short x);

extern "C" unsigned short __stdcall read_ad_x(unsigned short x);

extern "C" unsigned short __stdcall n_read_pixel_ad(unsigned short n, unsigned short pos);

extern "C" unsigned short __stdcall read_pixel_ad(unsigned short pos);

extern "C" short __stdcall n_get_z_distance(unsigned short n, short x, short y, short z);

extern "C" short __stdcall get_z_distance(short x, short y, short z);

extern "C" unsigned short __stdcall n_get_io_status(unsigned short n);

extern "C" unsigned short __stdcall get_io_status();

extern "C" short __stdcall load_cor(const char * FileName);

extern "C" short __stdcall load_pro(const char * FileName);

extern "C" unsigned short __stdcall n_get_serial_number(unsigned short n);

extern "C" unsigned short __stdcall get_serial_number();

extern "C" long __stdcall n_get_serial_number_32(unsigned short n);

extern "C" long __stdcall get_serial_number_32();

extern "C" unsigned short __stdcall n_get_rtc_version(unsigned short n);

extern "C" unsigned short __stdcall get_rtc_version();

extern "C" short __stdcall n_auto_cal(unsigned short n, unsigned short Head, unsigned short command);

extern "C" short __stdcall auto_cal(unsigned short Head, unsigned short command);

extern "C" void __stdcall n_set_hi(unsigned short n, double GalvoGainX, double GalvoGainY, short GalvoOffsetX, short GalvoOffsetY, short Head);

extern "C" void __stdcall set_hi(double GalvoGainX, double GalvoGainY, short GalvoOffsetX, short GalvoOffsetY, short Head);

extern "C" void __stdcall n_set_list_mode(unsigned short n, unsigned short mode);

extern "C" void __stdcall set_list_mode(unsigned short mode);

extern "C" unsigned short __stdcall n_get_list_space(unsigned short n);

extern "C" unsigned short __stdcall get_list_space();

extern "C" void __stdcall n_save_and_restart_timer(unsigned short n);

extern "C" void __stdcall save_and_restart_timer();

extern "C" void __stdcall n_set_ext_start_delay_list(unsigned short n, short delay, short encoder);

extern "C" void __stdcall set_ext_start_delay_list(short delay, short encoder);

extern "C" double __stdcall n_get_time(unsigned short n);

extern "C" double __stdcall get_time();

extern "C" void __stdcall get_hi_data(unsigned short* x1, unsigned short* x2, unsigned short* y1, unsigned short* y2);

extern "C" short __stdcall teachin(const char * FileName, short Xin, short Yin, short Zin, double LL0, short* Xout, short* Yout, short* Zout);

extern "C" short __stdcall getmemory(unsigned short adr);

extern "C" void __stdcall set_timeout(unsigned int timeout);

extern "C" void __stdcall set_timeouts(unsigned int acquire_timeout_us, unsigned int acquire_max_retries, unsigned int send_recv_timeout_us, unsigned int send_recv_max_retries, unsigned int acqu_rel_min_intvl_ms);

extern "C" void __stdcall get_timeouts(unsigned int* acquire_timeout_us, unsigned int* acquire_max_retries, unsigned int* send_recv_timeout_us, unsigned int* send_recv_max_retries, unsigned int* acqu_rel_min_intvl_ms);

extern "C" unsigned int __stdcall rs232_config(unsigned int baudrate, unsigned int parity, unsigned int stopbits);

extern "C" unsigned int __stdcall n_rs232_config(unsigned short n, unsigned int baudrate, unsigned int parity, unsigned int stopbits);

extern "C" unsigned int __stdcall rs232_write_data(unsigned int data);

extern "C" unsigned int __stdcall n_rs232_write_data(unsigned short n, unsigned int data);

extern "C" unsigned int __stdcall rs232_write_text(const char * text);

extern "C" unsigned int __stdcall n_rs232_write_text(unsigned short n, const char * text);

extern "C" unsigned int __stdcall rs232_read_data(unsigned int* data);

extern "C" unsigned int __stdcall n_rs232_read_data(unsigned short n, unsigned int* data);

extern "C" void __stdcall n_eth_set_com_timeouts_auto(unsigned short cardNo, double initial_timeout_ms, double sum_timeout_ms, double multiplicator, long mode);

extern "C" void __stdcall eth_set_com_timeouts_auto(double initial_timeout_ms, double sum_timeout_ms, double multiplicator, long mode);

extern "C" void __stdcall n_eth_get_com_timeouts_auto(unsigned short cardNo, double* initial_timeout_ms, double* sum_timeout_ms, double* multiplicator, long* mode);

extern "C" void __stdcall eth_get_com_timeouts_auto(double* initial_timeout_ms, double* sum_timeout_ms, double* multiplicator, long* mode);

extern "C" unsigned int __stdcall n_eth_watchdog_timer_config(unsigned short n, unsigned int timer_ms);

extern "C" unsigned int __stdcall eth_watchdog_timer_config(unsigned int timer_ms);

extern "C" unsigned int __stdcall n_eth_watchdog_timer_reset(unsigned short n);

extern "C" unsigned int __stdcall eth_watchdog_timer_reset();

extern "C" void __stdcall n_eth_link_loss_config(unsigned short n, unsigned int mode);

extern "C" void __stdcall eth_link_loss_config(unsigned int mode);

extern "C" unsigned int __stdcall n_eth_get_last_error(unsigned short n);

extern "C" unsigned int __stdcall eth_get_last_error();

extern "C" unsigned int __stdcall n_eth_get_error(unsigned short n);

extern "C" unsigned int __stdcall eth_get_error();

extern "C" unsigned int __stdcall n_eth_error_dump(unsigned short n, unsigned int * dump);