RTCEth/Import Declarations/Visual Basic/RTC4ethImport.bas

Declare Sub      goto_xy Lib "RTC4ethDLL.DLL" (ByVal x As Integer, ByVal y As Integer)
Declare Function n_get_hex_version Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Integer
Declare Function get_hex_version Lib "RTC4ethDLL.DLL" () As Integer
Declare Sub      n_disable_laser Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      disable_laser Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_enable_laser Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      enable_laser Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_stop_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      stop_list Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_restart_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      restart_list Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_get_xyz_pos Lib "RTC4ethDLL.DLL" (ByVal n As Integer, x As Integer, y As Integer, z As Integer)
Declare Sub      get_xyz_pos Lib "RTC4ethDLL.DLL" (x As Integer, y As Integer, z As Integer)
Declare Sub      n_get_xy_pos Lib "RTC4ethDLL.DLL" (ByVal n As Integer, x As Integer, y As Integer)
Declare Sub      get_xy_pos Lib "RTC4ethDLL.DLL" (x As Integer, y As Integer)
Declare Sub      n_select_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal list_2 As Integer)
Declare Sub      select_list Lib "RTC4ethDLL.DLL" (ByVal list_2 As Integer)
Declare Sub      n_z_out Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal z As Integer)
Declare Sub      z_out Lib "RTC4ethDLL.DLL" (ByVal z As Integer)
Declare Sub      n_set_firstpulse_killer Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal fpk As Integer)
Declare Sub      set_firstpulse_killer Lib "RTC4ethDLL.DLL" (ByVal fpk As Integer)
Declare Sub      n_set_standby Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal half_period As Integer, ByVal pulse As Integer)
Declare Sub      set_standby Lib "RTC4ethDLL.DLL" (ByVal half_period As Integer, ByVal pulse As Integer)
Declare Sub      n_laser_signal_on Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      laser_signal_on Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_laser_signal_off Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      laser_signal_off Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_set_delay_mode Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal varpoly As Integer, ByVal directmove3d As Integer, ByVal edgelevel As Integer, ByVal minjumpdelay As Integer, ByVal jumplengthlimit As Integer)
Declare Sub      set_delay_mode Lib "RTC4ethDLL.DLL" (ByVal varpoly As Integer, ByVal directmove3d As Integer, ByVal edgelevel As Integer, ByVal minjumpdelay As Integer, ByVal jumplengthlimit As Integer)
Declare Sub      n_set_piso_control Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal l1 As Integer, ByVal l2 As Integer)
Declare Sub      set_piso_control Lib "RTC4ethDLL.DLL" (ByVal l1 As Integer, ByVal l2 As Integer)
Declare Sub      n_select_status Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal mode As Integer)
Declare Sub      select_status Lib "RTC4ethDLL.DLL" (ByVal mode As Integer)
Declare Sub      n_get_encoder Lib "RTC4ethDLL.DLL" (ByVal n As Integer, zx As Integer, zy As Integer)
Declare Sub      get_encoder Lib "RTC4ethDLL.DLL" (zx As Integer, zy As Integer)
Declare Sub      n_select_cor_table Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal heada As Integer, ByVal headb As Integer)
Declare Sub      select_cor_table Lib "RTC4ethDLL.DLL" (ByVal heada As Integer, ByVal headb As Integer)
Declare Sub      n_execute_at_pointer Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal position As Integer)
Declare Sub      execute_at_pointer Lib "RTC4ethDLL.DLL" (ByVal position As Integer)
Declare Function n_get_head_status Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal head As Integer) As Integer
Declare Function get_head_status Lib "RTC4ethDLL.DLL" (ByVal head As Integer) As Integer
Declare Sub      n_simulate_encoder Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal channel As Integer)
Declare Sub      simulate_encoder Lib "RTC4ethDLL.DLL" (ByVal channel As Integer)
Declare Sub      n_release_wait Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      release_wait Lib "RTC4ethDLL.DLL" ()
Declare Function n_get_wait_status Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Integer
Declare Function get_wait_status Lib "RTC4ethDLL.DLL" () As Integer
Declare Sub      n_set_laser_mode Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal mode As Integer)
Declare Sub      set_laser_mode Lib "RTC4ethDLL.DLL" (ByVal mode As Integer)
Declare Sub      n_set_ext_start_delay Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal delay As Integer, ByVal encoder As Integer)
Declare Sub      set_ext_start_delay Lib "RTC4ethDLL.DLL" (ByVal delay As Integer, ByVal encoder As Integer)
Declare Sub      n_home_position Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal xhome As Integer, ByVal yhome As Integer)
Declare Sub      home_position Lib "RTC4ethDLL.DLL" (ByVal xhome As Integer, ByVal yhome As Integer)
Declare Sub      n_set_rot_center Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal center_x As Long, ByVal center_y As Long)
Declare Sub      set_rot_center Lib "RTC4ethDLL.DLL" (ByVal center_x As Long, ByVal center_y As Long)
Declare Sub      n_dsp_start Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      dsp_start Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_write_da_x Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal x As Integer, ByVal value As Integer)
Declare Sub      write_da_x Lib "RTC4ethDLL.DLL" (ByVal x As Integer, ByVal value As Integer)
Declare Function n_read_ad_x Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal x As Integer) As Integer
Declare Function read_ad_x Lib "RTC4ethDLL.DLL" (ByVal x As Integer) As Integer
Declare Function n_read_pixel_ad Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal pos As Integer) As Integer
Declare Function read_pixel_ad Lib "RTC4ethDLL.DLL" (ByVal pos As Integer) As Integer
Declare Function n_get_z_distance Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal x As Integer, ByVal y As Integer, ByVal z As Integer) As Integer
Declare Function get_z_distance Lib "RTC4ethDLL.DLL" (ByVal x As Integer, ByVal y As Integer, ByVal z As Integer) As Integer
Declare Function n_get_io_status Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Integer
Declare Function get_io_status Lib "RTC4ethDLL.DLL" () As Integer
Declare Function load_cor Lib "RTC4ethDLL.DLL" (ByVal filename As String) As Integer
Declare Function load_pro Lib "RTC4ethDLL.DLL" (ByVal filename As String) As Integer
Declare Function n_get_serial_number Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Integer
Declare Function get_serial_number Lib "RTC4ethDLL.DLL" () As Integer
Declare Function n_get_serial_number_32 Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Long
Declare Function get_serial_number_32 Lib "RTC4ethDLL.DLL" () As Long
Declare Function n_get_rtc_version Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Integer
Declare Function get_rtc_version Lib "RTC4ethDLL.DLL" () As Integer
Declare Function n_auto_cal Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal head As Integer, ByVal command As Integer) As Integer
Declare Function auto_cal Lib "RTC4ethDLL.DLL" (ByVal head As Integer, ByVal command As Integer) As Integer
Declare Sub      n_set_hi Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal galvogainx As Double, ByVal galvogainy As Double, ByVal galvooffsetx As Integer, ByVal galvooffsety As Integer, ByVal head As Integer)
Declare Sub      set_hi Lib "RTC4ethDLL.DLL" (ByVal galvogainx As Double, ByVal galvogainy As Double, ByVal galvooffsetx As Integer, ByVal galvooffsety As Integer, ByVal head As Integer)
Declare Sub      n_set_list_mode Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal mode As Integer)
Declare Sub      set_list_mode Lib "RTC4ethDLL.DLL" (ByVal mode As Integer)
Declare Function n_get_list_space Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Integer
Declare Function get_list_space Lib "RTC4ethDLL.DLL" () As Integer
Declare Sub      n_save_and_restart_timer Lib "RTC4ethDLL.DLL" (ByVal n As Integer)
Declare Sub      save_and_restart_timer Lib "RTC4ethDLL.DLL" ()
Declare Sub      n_set_ext_start_delay_list Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal delay As Integer, ByVal encoder As Integer)
Declare Sub      set_ext_start_delay_list Lib "RTC4ethDLL.DLL" (ByVal delay As Integer, ByVal encoder As Integer)
Declare Function n_get_time Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Double
Declare Function get_time Lib "RTC4ethDLL.DLL" () As Double
Declare Sub      get_hi_data Lib "RTC4ethDLL.DLL" (x1 As Integer, x2 As Integer, y1 As Integer, y2 As Integer)
Declare Function teachin Lib "RTC4ethDLL.DLL" (ByVal filename As String, ByVal xin As Integer, ByVal yin As Integer, ByVal zin As Integer, ByVal ll0 As Double, xout As Integer, yout As Integer, zout As Integer) As Integer
Declare Function getmemory Lib "RTC4ethDLL.DLL" (ByVal adr As Integer) As Integer
Declare Sub      set_timeout Lib "RTC4ethDLL.DLL" (ByVal timeout As Long)
Declare Sub      set_timeouts Lib "RTC4ethDLL.DLL" (ByVal acquire_timeout_us As Long, ByVal acquire_max_retries As Long, ByVal send_recv_timeout_us As Long, ByVal send_recv_max_retries As Long, ByVal acqu_rel_min_intvl_ms As Long)
Declare Sub      get_timeouts Lib "RTC4ethDLL.DLL" (acquire_timeout_us As Long, acquire_max_retries As Long, send_recv_timeout_us As Long, send_recv_max_retries As Long, acqu_rel_min_intvl_ms As Long)
Declare Function rs232_config Lib "RTC4ethDLL.DLL" (ByVal baudrate As Long, ByVal parity As Long, ByVal stopbits As Long) As Long
Declare Function n_rs232_config Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal baudrate As Long, ByVal parity As Long, ByVal stopbits As Long) As Long
Declare Function rs232_write_data Lib "RTC4ethDLL.DLL" (ByVal data As Long) As Long
Declare Function n_rs232_write_data Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal data As Long) As Long
Declare Function rs232_write_text Lib "RTC4ethDLL.DLL" (ByVal text As String) As Long
Declare Function n_rs232_write_text Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal text As String) As Long
Declare Function rs232_read_data Lib "RTC4ethDLL.DLL" (data As Long) As Long
Declare Function n_rs232_read_data Lib "RTC4ethDLL.DLL" (ByVal n As Integer, data As Long) As Long
Declare Sub      n_eth_set_com_timeouts_auto Lib "RTC4ethDLL.DLL" (ByVal cardno As Integer, ByVal initial_timeout_ms As Double, ByVal sum_timeout_ms As Double, ByVal multiplicator As Double, ByVal mode As Long)
Declare Sub      eth_set_com_timeouts_auto Lib "RTC4ethDLL.DLL" (ByVal initial_timeout_ms As Double, ByVal sum_timeout_ms As Double, ByVal multiplicator As Double, ByVal mode As Long)
Declare Sub      n_eth_get_com_timeouts_auto Lib "RTC4ethDLL.DLL" (ByVal cardno As Integer, initial_timeout_ms As Double, sum_timeout_ms As Double, multiplicator As Double, mode As Long)
Declare Sub      eth_get_com_timeouts_auto Lib "RTC4ethDLL.DLL" (initial_timeout_ms As Double, sum_timeout_ms As Double, multiplicator As Double, mode As Long)
Declare Function n_eth_watchdog_timer_config Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal timer_ms As Long) As Long
Declare Function eth_watchdog_timer_config Lib "RTC4ethDLL.DLL" (ByVal timer_ms As Long) As Long
Declare Function n_eth_watchdog_timer_reset Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Long
Declare Function eth_watchdog_timer_reset Lib "RTC4ethDLL.DLL" () As Long
Declare Sub      n_eth_link_loss_config Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal mode As Long)
Declare Sub      eth_link_loss_config Lib "RTC4ethDLL.DLL" (ByVal mode As Long)
Declare Function n_eth_get_last_error Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Long
Declare Function eth_get_last_error Lib "RTC4ethDLL.DLL" () As Long
Declare Function n_eth_get_error Lib "RTC4ethDLL.DLL" (ByVal n As Integer) As Long
Declare Function eth_get_error Lib "RTC4ethDLL.DLL" () As Long
Declare Function n_eth_error_dump Lib "RTC4ethDLL.DLL" (ByVal n As Integer, ByVal dump As pdword) As Long
